upload code by cza

--- a/scrapy/spider_cza/net-learning/xlrd-xlwt/README
+++ b/scrapy/spider_cza/net-learning/xlrd-xlwt/README
@@ -13,3 +13,8 @@ value表示获取值
 
 使用sheet.merged_cells可以获取页面中所有的合并单元格坐标，
 类似[(4,5,2,4), (5,6,2,4)]， 表示行4-5（不包含5？），列2-4（不包含4？），为合并单元格。因为他是按0开始算的
+
+rowspan: 属性，表示某一cell，合并多少行
+colspan
+
+
